# Weather_App

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/weather_app/: main.py
src/weather_app/api/: facade.py  gui.py
src/weather_app/core/: weather_manager.py
src/weather_app/infra/: geo_service.py  weather_service.py
src/weather_app/models/: location.py  weather.py
tests/: test_core.py  test_infra.py
