[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app"
version = "0.1.0"
description = "A professional weather application with a modern GUI."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "customtkinter",
    "requests",
    "geopy",
    "pytz",
    "timezonefinder",
    "Pillow",
    "CTkMessagebox"
]

[project.scripts]
weather-app = "weather_app.main:main"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
